<resources>
    <string name="app_name">Planner</string>
    <string name="settings">Paramètres</string>
    <string name="today">Aujourd\'hui</string>
    <string name="notifications">Notifications</string>
    <string name="date">Date</string>
    <string name="hour">Heure</string>
    <string name="add_task">Ajouter une tâche</string>
    <string name="add_list">Ajouter une liste</string>
    <string name="dismiss_notification">Marquer tout comme lu</string>
    <string name="sort">Trier</string>
    <string name="sort_due_date">Par date d\'échance</string>
    <string name="sort_alphabetical">Par ordre alphabétique</string>
    <string name="rename_list">Renommer la liste</string>
    <string name="duplicate_list">Dupliquer la liste</string>
    <string name="move_list">Déplacer la liste</string>
    <string name="delete_list">Supprimer la liste</string>
    <string name="modify_task">Modifier la tâche</string>
    <string name="move_task">Déplacer la tâche</string>
    <string name="duplicate_task">Dupliquer la tâche</string>
    <string name="delete_task">Supprimer la tâche</string>
    <string name="name">Nom</string>
    <string name="location">Emplacement</string>
    <string name="calendar">Calendrier</string>
    <string name="tasks">Tâches</string>
    <string name="study_mode">Mode études</string>
    <string name="day">Jour</string>
    <string name="three_day">3 jours</string>
    <string name="week">Semaine</string>
    <string name="see_PDF">Voir le PDF</string>
    <string name="see_done_tasks">Voir les tâches achevées</string>
    <string name="cancel">Annuler</string>
    <string name="add">Ajouter</string>
    <string name="add_class">Ajouter un cours</string>
    <string name="search">Rechercher</string>
    <string name="month">Mois</string>
    <string name="description">Description</string>
    <string name="delete_class">Voulez-vous supprimer ce cours ?</string>
    <string name="delete">Supprimer</string>
    <string name="on_campus">En présence</string>
    <string name="online">À distance</string>
    <string name="asynchronous">Asynchrone</string>
    <string name="all_day">Toute la journée</string>
    <string name="add_date">Ajouter une date</string>
    <string name="add_time">Ajouter une heure</string>
    <string name="deleted">Supprimée</string>
    <string name="save">Sauvegarder</string>
    <string name="delete_checked_task">Supprimer les tâches finies</string>
    <string name="confirm_deletion">Supprimer les tâches finies ?</string>
    <string name="modify_class">Modifier le cours</string>
</resources>