<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="@string/calendar">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_calendar"
                        android:icon="@drawable/ic_calendar_today"
                        android:title="@string/calendar" />
                    <item
                        android:id="@+id/nav_monthly_calendar"
                        android:icon="@drawable/ic_calendar_month"
                        android:title="@string/month" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_task"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_reader"
            android:title="@string/study_mode" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>