<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/className"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/dialog_top_bottom_margins"
        android:hint="@string/name"
        android:inputType="textAutoCorrect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/dialog_top_bottom_margins"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/dialog_top_bottom_margins"
            android:layout_weight="1"
            android:text="@string/date" />

        <Button
            android:id="@+id/startTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_top_bottom_margins"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/dialog_top_bottom_margins"
            android:layout_weight="1"
            android:text="@string/hour" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/endDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/dialog_top_bottom_margins"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/dialog_top_bottom_margins"
            android:layout_weight="1"
            android:text="@string/date" />

        <Button
            android:id="@+id/endTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_top_bottom_margins"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/dialog_top_bottom_margins"
            android:layout_weight="1"
            android:text="@string/hour" />

    </LinearLayout>

    <EditText
        android:id="@+id/classLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/dialog_top_bottom_margins"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/dialog_top_bottom_margins"
        android:hint="@string/location"
        android:inputType="textAutoCorrect" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/classMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/dialog_top_bottom_margins"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin" />

</LinearLayout>