<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="6dp"
            android:paddingEnd="@dimen/activity_margin"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/title"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_date"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/addDateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/dialog_top_bottom_margins" />

            </LinearLayout>

            <TextView
                android:id="@+id/dateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:gravity="start|center_vertical"
                android:textAppearance="?attr/textAppearanceBody1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dialog_top_bottom_margins"
                    android:layout_weight="1"
                    android:text="@string/add_time"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/addTimeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/dialog_top_bottom_margins"
                    android:enabled="false" />

            </LinearLayout>

            <TextView
                android:id="@+id/timeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:gravity="start|center_vertical"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:autofillHints="text"
                android:hint="@string/description"
                android:lines="3"
                android:scrollbars="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textCapSentences|textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>